--- a/src/app/modules/shared-components/components/header/header.component.html
+++ b/src/app/modules/shared-components/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>VideoGamer</span>
+  <span [routerLink]="">VideoGamer</span>
 
   <span class="example-fill-remaining-space"></span>
 
