--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,1 +1,6 @@
-
+<mat-grid-list cols="2" rowHeight="2:1">
+  <mat-grid-tile>
+    <h1>Welcome to VideoGamer</h1>
+  </mat-grid-tile>
+  <mat-grid-tile>2</mat-grid-tile>
+</mat-grid-list>
