--- a/src/app/modules/shared-components/components/footer/footer.component.html
+++ b/src/app/modules/shared-components/components/footer/footer.component.html
@@ -1,1 +1,3 @@
-<p>footer works!</p>
+<mat-toolbar color="primary">
+  <small class="text-center">Copyright 2019 &copy; Stefan Bogdanovic</small>
+</mat-toolbar>
