--- a/src/app/modules/shared-components/components/header/header.component.html
+++ b/src/app/modules/shared-components/components/header/header.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar color="primary">
-  <span [routerLink]="">VideoGamer</span>
+  <span class="light-text">VideoGamer</span>
 
   <span class="example-fill-remaining-space"></span>
 
   <span>
     <nav mat-tab-nav-bar>
       <button mat-button *ngFor="let link of links" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive"
-        class="nav-link">
+        class="nav-link light-text">
         {{ link.name }}
       </button>
     </nav>
