--- a/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="loading">
-  <app-fingerprint-spinner [animationDuration]="1000" [size]="100" [color]="'#ff1d5e'">
-  </app-fingerprint-spinner>
+  <mat-grid-list cols="1" rowHeight="100">
+    <mat-grid-tile>
+      <app-fingerprint-spinner [animationDuration]="1000" [size]="100" [color]="'#ff1d5e'">
+      </app-fingerprint-spinner>
+    </mat-grid-tile>
+  </mat-grid-list>
 </div>
