--- a/src/app/modules/errors/components/errors/errors.component.html
+++ b/src/app/modules/errors/components/errors/errors.component.html
@@ -1,1 +1,5 @@
-<h1>404 page</h1>
+<mat-grid-list cols="1" rowHeight="100">
+  <mat-grid-tile>
+    <h1>Ooops 404 you have lost.</h1>
+  </mat-grid-tile>
+</mat-grid-list>
