Working on services

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,6 +1,19 @@
-<mat-grid-list cols="2" rowHeight="2:1">
+<mat-grid-list cols="1" rowHeight="2:1">
   <mat-grid-tile>
     <h1 class="light-text">Welcome to VideoGamer</h1>
+    <h5>Explore gaming world.</h5>
+    <mat-form-field>
+      <input matInput placeholder="label" value="value">
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Cars</mat-label>
+      <select matNativeControl required>
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="mercedes">Mercedes</option>
+        <option value="audi">Audi</option>
+      </select>
+    </mat-form-field>
+    <button mat-raised-button color="primary" (click)="onClick();">Explore</button>
   </mat-grid-tile>
-  <mat-grid-tile>2</mat-grid-tile>
 </mat-grid-list>
