Cleaning code up, API found

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,7 +1,7 @@
 <mat-grid-list cols="1" rowHeight="2:1">
   <mat-grid-tile>
     <h1 class="light-text">Welcome to VideoGamer</h1>
-    <h5>Explore gaming world.</h5>
+    <h5>Discover your new favorite game.</h5>
     <mat-form-field>
       <input matInput placeholder="label" value="value">
     </mat-form-field>
