Fixing footer & header

--- a/src/app/modules/shared-components/components/footer/footer.component.html
+++ b/src/app/modules/shared-components/components/footer/footer.component.html
@@ -1,3 +1,9 @@
 <mat-toolbar color="primary">
-  <small class="text-center light-text">Copyright 2019 &copy; Stefan Bogdanovic</small>
+  <small class="text-center light-text">&copy; 2019 Stefan Bogdanović</small>
+  <span class="example-fill-remaining-space"></span>
+
+  <span>
+    <small class="light-text">Made with </small>
+  </span>
+  <mat-icon color="warn" class="padding-left">favorite</mat-icon>
 </mat-toolbar>
