--- a/src/app/modules/shared-components/components/footer/footer.component.css
+++ b/src/app/modules/shared-components/components/footer/footer.component.css
@@ -5,3 +5,13 @@
 .light-text {
   font-weight: 100 !important;
 }
+
+.example-fill-remaining-space {
+  /* This fills the remaining space, by using flexbox.
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+
+.padding-left {
+  padding-left: 5px !important;
+}
