--- a/src/app/modules/shared-components/components/header/header.component.html
+++ b/src/app/modules/shared-components/components/header/header.component.html
@@ -1,5 +1,7 @@
 <mat-toolbar color="primary">
-  <span class="light-text">VideoGamer</span>
+  <button mat-button [routerLink]="''">
+    <span class="light-text">VideoGamer</span>
+  </button>
 
   <span class="example-fill-remaining-space"></span>
 
@@ -7,8 +9,21 @@
     <nav mat-tab-nav-bar>
       <button mat-button *ngFor="let link of links" [routerLink]="link.path" routerLinkActive #rla="routerLinkActive"
         class="nav-link light-text">
-        {{ link.name }}
+        <mat-icon>{{ link.icon }}</mat-icon>
+        <span class="spacy">{{ link.name }}</span>
       </button>
+
+      <button class="light-text" mat-button [matMenuTriggerFor]="menu">
+        <mat-icon>apps</mat-icon>
+        <span class="spacy">About project</span>
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>Follow me on Github</button>
+        <button mat-icon-button>
+          <mat-icon>star</mat-icon>
+          <span>Star it on Github</span>
+        </button>
+      </mat-menu>
     </nav>
   </span>
 </mat-toolbar>
