--- a/src/app/modules/gaming/components/game/game.component.html
+++ b/src/app/modules/gaming/components/game/game.component.html
@@ -1,1 +1,27 @@
-<p>game works!</p>
+<mat-card class="example-card">
+  <ng-template #name>
+
+  </ng-template>
+
+  <img mat-card-image [src]="game.background_image" [alt]="game.name" (hover)="imageToVideoReplace(game);" />
+
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>{{ game.name | uppercase }}</mat-card-title>
+    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+  </mat-card-header>
+  <mat-card-content>
+    <p>
+      The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
+      A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
+      bred for hunting.
+    </p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button [routerLink]="['/gaming/game', game.slug]" color="primary">Read More</button>
+    <button mat-raised-button (click)="addToWishList();">
+      <span>Add to WishList</span>
+      <mat-icon>shopping_cart</mat-icon>
+    </button>
+  </mat-card-actions>
+</mat-card>
