--- a/src/app/modules/shared-components/components/header/header.component.html
+++ b/src/app/modules/shared-components/components/header/header.component.html
@@ -52,7 +52,7 @@
         </a>
         <a mat-menu-item href="https://github.com/CerealKiller97/NG-VideoGamer" target="_blank">
           <mat-icon>star</mat-icon>
-          <span>Star it on Github</span>
+          <span>Star project on Github</span>
         </a>
         <button mat-menu-item href="https://github.com/CerealKiller97/NG-VideoGamer" (click)="openReportBugDialog();">
           <mat-icon>bug_report</mat-icon>
