--- a/src/app/modules/gaming/components/game-list/game-list.component.html
+++ b/src/app/modules/gaming/components/game-list/game-list.component.html
@@ -1,1 +1,5 @@
-<p>game-list works!</p>
+<div class="container">
+  <mat-toolbar>
+    <h1 class="light-text text-center">Gaming - Platform [PC]</h1>
+  </mat-toolbar>
+</div>
