--- a/src/app/modules/errors/components/errors/errors.component.html
+++ b/src/app/modules/errors/components/errors/errors.component.html
@@ -1,5 +1,7 @@
-<mat-grid-list cols="1" rowHeight="100">
-  <mat-grid-tile>
-    <h1>Ooops 404 you have lost.</h1>
-  </mat-grid-tile>
-</mat-grid-list>
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h1 class="light-text">Ooops look you got lost :( 404 page</h1>
+    </div>
+  </div>
+</div>
