--- a/src/app/modules/home/components/home/home.component.css
+++ b/src/app/modules/home/components/home/home.component.css
@@ -1,1 +1,13 @@
+#hero {
+  background-color: red;
+  width: 100%;
+}
 
+.example-card {
+  max-width: 400px;
+}
+
+.example-header-image {
+  background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
+  background-size: cover;
+}
