--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,16 +1,19 @@
 <div class="container">
-  <div class="row">
-    <div class="col col-lg-6">
+  <div class="row py-5">
+    <div class="col-md-6">
       <h1 class="light-text">Welcome to VideoGamer</h1>
-      <h5 class="ligt-text">Discover your new favorite game.</h5>
-      <button mat-raised-button color="primary" (click)="onClick();">Explore</button>
+      <h5 class="light-text">Discover your new favorite game.</h5>
+      <!-- <button mat-raised-button color="primary" (click)="onClick();">Explore</button> -->
     </div>
   </div>
-  <div class="row">
-    <h1 class="light-text text-center">Most popular games</h1>
-    <div class="col col-lg-4 col-sm-6">
-      <app-game *ngFor="let game of games" [game]="game">
-      </app-game>
+
+  <h1 class="light-text text-center">Most popular games</h1>
+  <div class="d-flex justify-content-around">
+    <div class="row">
+      <div class="col col-lg-6" *ngFor="let game of games">
+        <app-game [game]="game">
+        </app-game>
+      </div>
     </div>
   </div>
 </div>
