Home page done FIXED

--- a/src/app/modules/gaming/components/game/game.component.html
+++ b/src/app/modules/gaming/components/game/game.component.html
@@ -42,7 +42,7 @@
         <mat-list-item role="listitem">
           <span>Realese date: </span>
           <span class="example-fill-remaining-space"></span>
-          <span>{{ game.released }}</span>
+          <span>{{ game.realesed }}</span>
         </mat-list-item>
       </mat-list>
 
