--- a/src/app/modules/gaming/components/game-profile/game-profile.component.html
+++ b/src/app/modules/gaming/components/game-profile/game-profile.component.html
@@ -3,7 +3,7 @@
     {{ game?.name }}
   </h1>
   <div class="row">
-    <mat-chip color="primary">{{ game?.realesed }}</mat-chip>
+    <mat-chip color="primary">{{ game?.released }}</mat-chip>
     <!-- <mat-icon *ngFor="let platform of game.parent_platforms">
       {{ platform?.platform.slug }}
     </mat-icon> -->
