--- a/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.html
@@ -1,3 +1,9 @@
+<div class="loading">
+  <div class='uil-ring-css' style='transform:scale(0.79);'>
+    <div></div>
+  </div>
+</div>
+
 <div *ngIf="loading">
   <mat-grid-list cols="1" rowHeight="100">
     <mat-grid-tile>
