--- a/src/app/modules/layouts/video-gamer-layout/comoponents/default/default.component.html
+++ b/src/app/modules/layouts/video-gamer-layout/comoponents/default/default.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
 <app-loading-spinner></app-loading-spinner>
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
