--- a/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.css
+++ b/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.css
@@ -1,38 +1,16 @@
-/* div.loading {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(16, 16, 16, 0.5);
-  transition: all 1s ease-in-out;
+#overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100% !important;
+  width: 100% !important;
+  position: absolute;
+  background-color: #3f51b5 !important;
+  z-index: 1 !important;
+  overflow: hidden !important;
+  transition: 1s ease-in-out !important;
 }
 
-
-
-.uil-ring-css>div {
-  position: absolute;
-  display: block;
-  width: 160px;
-  height: 160px;
-  top: 20px;
-  left: 20px;
-  border-radius: 80px;
-  box-shadow: 0 6px 0 0 #ffffff;
-  -ms-animation: uil-ring-anim 1s linear infinite;
-  -moz-animation: uil-ring-anim 1s linear infinite;
-  -webkit-animation: uil-ring-anim 1s linear infinite;
-  -o-animation: uil-ring-anim 1s linear infinite;
-  animation: uil-ring-anim 1s linear infinite;
-} */
-
-.center {
-  margin: auto;
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 200px;
-  height: 200px;
+#loading-text {
+  color: whitesmoke !important;
 }
