--- a/src/styles.css
+++ b/src/styles.css
@@ -8818,4 +8818,20 @@ html {
   }
 }
 
-/*# sourceMappingURL=bootstrap-utilities.css.map */
+::-webkit-scrollbar {
+  width: .3em
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #f44336;
+  outline: #708090 solid 1px
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f5f5f5
+}
+
+html,
+body {
+  overflow-x: hidden;
+}
