--- a/src/app/modules/shared-components/components/footer/footer.component.html
+++ b/src/app/modules/shared-components/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" [ngClass]="{'fixed': shouldBeFixed}">
   <small class="text-center light-text">&copy; 2019 Stefan Bogdanović</small>
   <span class="example-fill-remaining-space"></span>
 
