--- a/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.html
+++ b/src/app/modules/shared-components/components/loading-spinner/loading-spinner.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="loading" id="overlay">
   <!-- <h1 id="loading-text" class="light-text text-center mx-2 my-5"></h1> -->
-  <!-- <mat-spinner class="my-5" [value]="400" color="warn"></mat-spinner> -->
-  <app-fingerprint-spinner [animationDuration]="1000" [size]="100" [color]="'#ff1d5e'">
+  <!-- <mat-spinner class="my-5" [value]="400" color="warn"></mat-spinner>  ff1d5e-->
+  <app-fingerprint-spinner [animationDuration]="1000" [size]="100" [color]="'#ffffff'">
   </app-fingerprint-spinner>
 </div>
