--- a/src/app/modules/errors/components/errors/errors.component.html
+++ b/src/app/modules/errors/components/errors/errors.component.html
@@ -1,13 +1,17 @@
-<mat-grid-list cols="1" rowHeight="500">
+<mat-grid-list cols="1" rowHeight="550">
   <mat-grid-tile>
     <div class="container my-5 mx-5">
       <div class="row">
         <div class="col-md-6 offset-md-3">
-          <h1 class="light-text">Ooops looks you got lost :( 404 page</h1>
-          <button mat-raised-button (click)="goBack();">Go back</button>
+          <h1 class="light-text">Ooops looks you got lost :( </h1>
+          <button mat-raised-button (click)="goBack();">
+            <span>
+              Go back to
+            </span>
+            <mat-icon>home</mat-icon>
+          </button>
         </div>
       </div>
     </div>
-
   </mat-grid-tile>
 </mat-grid-list>
